--- a/pom.xml
+++ b/pom.xml
@@ -121,11 +121,11 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.2.1</version>
+				<version>3.5.1</version>
 				<executions>
 					<execution>
-						<id>test</id>
-						<phase>test</phase>
+						<id>verify</id>
+						<phase>verify</phase>
 						<goals>
 							<goal>exec</goal>
 						</goals>
